--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,17 @@
         android:layout_height="wrap_content"
         android:text="@string/button_add"
         android:onClick="addInfusionSetDialog"
-        android:layout_alignParentTop="true"
+        android:layout_marginLeft="87dp"
+        android:layout_marginStart="87dp"
+        android:layout_marginTop="14dp"
+        android:id="@+id/button"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="41dp"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="32dp"
-        android:id="@+id/button" />
+        android:layout_alignParentStart="true" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="900px"
+        android:id="@android:id/list"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="123dp"></ListView>
 </RelativeLayout>
