--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.vcf.przemek.firstappsdk16.MainActivity">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="900px"
-        android:id="@android:id/list"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="123dp"></ListView>
-
     <Button
         android:text="Refresh"
         android:layout_width="wrap_content"
@@ -53,12 +46,30 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_height="36dp" />
+
+    <TextView
+        android:text="Data zmiany wkłucia"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/button2"
+        android:id="@+id/change_date"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textSize="18dp"
+        android:layout_height="45dp" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:id="@android:id/list"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_height="800px"></ListView>
 </RelativeLayout>
